# rust-axum

./: Cargo.toml  README.md
.github/workflows/: release.yml
config/: apu-config.toml  apu2-config.toml  config.json  config.toml  macmini-config.toml  rpi-config.toml  test.json  test.toml
scripts/: build_and_restart.sh  download_and_restart.sh
src/: api.rs  application.rs  commands.rs  config.rs  connection.rs  controller.rs  main.rs  request.rs  request_info.rs  server.rs  service.rs  utils.rs  version.rs  version_info.rs
src/api/: commands.rs  config.rs  server.rs  version_info.rs
src/api/commands/: service.rs
src/application/: server.rs
src/commands/: service.rs
src/controller/: commands.rs  connection_info.rs  health.rs  request_info.rs  version_info.rs
src/service/: command_service.rs  connection_service.rs  request_info_service.rs  version_service.rs
src/service/connection_service/: internal.rs
src/utils/: request.rs  time.rs
systemd/: rust-axum.service
