[package]
name = "rust-axum"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
chrono = "0.4"
humantime-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["request-id", "timeout", "trace", "util"] }

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "rustc", "si"] }

[lints.rust]
unsafe_code = "forbid"
