[package]
name = "rust-axum"
version = "0.0.74"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["http2"] }
http-body-util = "0.1"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
humantime-serde = "1.1"
jiff = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "request-id",
    "timeout",
    "trace",
    "util",
] }

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "rustc", "si"] }

[lints.rust]
unsafe_code = "forbid"
